Added responsive align to footer.

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ License URI:	http://www.gnu.org/licenses/gpl-3.0.html
 /*
 
 Fonts
+Bootstrap responsive text-alignment extension
 Footer
 
 */
@@ -52,6 +53,36 @@ p{
 }
 
 /******************************************************************************
+              Bootstrap responsive text-alignment expansion
+******************************************************************************/
+.text-xs-left{text-align:left;}
+.text-xs-right{text-align:right;}
+.text-xs-center{text-align:center;}
+.text-xs-justify{text-align:justify;}
+
+@media (min-width: 768px){
+    .text-sm-left{text-align:left;}
+    .text-sm-right{text-align:right;}
+    .text-sm-center{text-align:center;}
+    .text-sm-justify{text-align:justify;}
+}
+
+@media (min-width: 992px){
+    .text-md-left{text-align:left;}
+    .text-md-right{text-align:right;}
+    .text-md-center{text-align:center;}
+    .text-md-justify{text-align:justify;}
+}
+
+@media (min-width: 1200px){
+    .text-lg-left{text-align:left;}
+    .text-lg-right{text-align:right;}
+    .text-lg-center{text-align:center;}
+    .text-lg-justify{text-align:justify;}
+}
+
+
+/******************************************************************************
                                Footer
 ******************************************************************************/
 
@@ -71,6 +102,3 @@ p{
     color: #FFFFFF;
 }
 
-#sitemap-logo{
-    text-align: right;
-}
